Fixed row spacing to aovid overflow

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ main {
 .topmenu .toolbar .row {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 11px;
   flex-wrap: nowrap;
   width: 100%;
   justify-content: space-between; /* Distribute space evenly */
